Fix framework image export cutoff

--- a/src/views/Project/Details/Frameworks/FrameworkDetail/styles.scss
+++ b/src/views/Project/Details/Frameworks/FrameworkDetail/styles.scss
@@ -172,5 +172,9 @@
             border-bottom: var(--width-separator-thin) solid var(--color-separator);
             padding: var(--spacing-small) var(--spacing-medium);
         }
+
+        .print-preview {
+            overflow: unset;
+        }
     }
 }
